region + instance type literals + additional status check

--- a/example.ipynb
+++ b/example.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scrapybara import Scrapybara, ScrapybaraConfig\n",
-    "from scrapybara.anthropic import ComputerTool, EditTool, BashTool"
+    "from scrapybara import Scrapybara, ScrapybaraConfig"
    ]
   },
   {
@@ -16,16 +15,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Scrapybara(api_key=\"scrapy-temp\")"
+    "client = Scrapybara(api_key=\"scrapy-temp\", config=ScrapybaraConfig(\n",
+    "    base_url=\"http://localhost:8000\",\n",
+    "))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance = client.start()\n",
+    "instance = client.start(instance_type=\"large\")\n",
     "instance_id = instance.instance_id"
    ]
   },
@@ -60,8 +61,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.computer(\"i-037cdff7c615d5374\", \"mouse_move\", [100, 200])\n",
+    "client.computer(instance_id, \"mouse_move\", [100, 200])\n",
     "display_base64_image(client.screenshot(instance_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.stop(instance_id)"
    ]
   }
  ],
