add pydantic models + remove pytest

--- a/example.ipynb
+++ b/example.ipynb
@@ -15,18 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Scrapybara(api_key=\"scrapy-temp\", config=ScrapybaraConfig(\n",
-    "    base_url=\"http://localhost:8000\",\n",
-    "))"
+    "client = Scrapybara(api_key=\"scrapy-temp\", config=ScrapybaraConfig()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance = client.start(instance_type=\"large\")\n",
+    "instance = client.start(instance_type=\"small\")\n",
     "instance_id = instance.instance_id"
    ]
   },
@@ -36,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.status(instance_id)"
+    "client.get(instance_id)"
    ]
   },
   {
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
