client + instance refactor

--- a/example.ipynb
+++ b/example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scrapybara import Scrapybara, ScrapybaraConfig"
+    "from scrapybara import Scrapybara"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Scrapybara(api_key=\"scrapy-temp\", config=ScrapybaraConfig()"
+    "client = Scrapybara(api_key=\"\")"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "instance = client.start(instance_type=\"small\")\n",
-    "instance_id = instance.instance_id"
+    "instance_id = instance.id"
    ]
   },
   {
@@ -50,7 +50,7 @@
     "    image_data = base64.b64decode(base64_string)\n",
     "    display(Image(data=image_data))\n",
     "\n",
-    "display_base64_image(client.screenshot(instance_id))"
+    "display_base64_image(instance.screenshot())"
    ]
   },
   {
@@ -59,17 +59,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.computer(instance_id, \"mouse_move\", [100, 200])\n",
-    "display_base64_image(client.screenshot(instance_id))"
+    "instance.computer(\"mouse_move\", [100, 200])\n",
+    "display_base64_image(instance.screenshot())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.stop(instance_id)"
+    "instance.bash(\"ls -la\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.get(instance_id)"
    ]
   }
  ],
