add browser api

--- a/example.ipynb
+++ b/example.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "instance.computer(\"mouse_move\", [100, 200])\n",
-    "display_base64_image(instance.screenshot())\n"
+    "display_base64_image(instance.screenshot())"
    ]
   },
   {
@@ -74,20 +74,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance.stop()"
+    "cdp_url = instance.browser.start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.get(instance_id)"
+    "from playwright.async_api import async_playwright\n",
+    "\n",
+    "playwright = await async_playwright().start()\n",
+    "\n",
+    "chromium = playwright.chromium\n",
+    "browser = await chromium.connect_over_cdp(cdp_url)\n",
+    "page = await browser.new_page()\n",
+    "await page.goto(\"https://scrapybara.com\")\n",
+    "ss = await page.screenshot(path=\"screenshot.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance.browser.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance.stop()"
    ]
   }
  ],
